unpackaged/main/default/objects/BillingTransaction__c/BillingTransaction__c.object-meta.xml
<CustomObject>
    <description>Child object of Billing Plan used to manage related transactions</description>
    <label>Billing Transaction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>