unpackaged/main/default/objects/BillingTransaction__c/fields/BillingPlan__c.field-meta.xml
<CustomField>
    <fullName>BillingPlan__c</fullName>
    <label>Billing Plan</label>
    <referenceTo>BillingPlan__c</referenceTo>
    <relationshipLabel>Billing Transactions</relationshipLabel>
    <relationshipName>Billing_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>