unpackaged/main/default/objects/BillingTransaction__c/fields/EstimatedDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDate__c</fullName>
    <label>Estimated Date</label>
    <type>Date</type>
</CustomField>