unpackaged/main/default/objects/BillingTransaction__c/fields/JalonType__c.field-meta.xml
<CustomField>
    <fullName>JalonType__c</fullName>
    <label>Jalon Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>