unpackaged/main/default/objects/BillingTransaction__c/fields/MaxDate__c.field-meta.xml
<CustomField>
    <fullName>MaxDate__c</fullName>
    <label>Max Date</label>
    <type>Date</type>
</CustomField>