unpackaged/main/default/objects/BillingTransaction__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <inlineHelpText>Allowed values : "1", "1.1", ".1"</inlineHelpText>
    <label>Step</label>
    <length>5</length>
    <type>Text</type>
</CustomField>