unpackaged/main/default/objects/BillingTransaction__c/fields/StepNumber__c.field-meta.xml
<CustomField>
    <fullName>StepNumber__c</fullName>
    <formula>VALUE(Step__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>